--- a/Stream/Dockerfile.oneSocket
+++ b/Stream/Dockerfile.oneSocket
@@ -1,8 +1,8 @@
 # in production this should probably be busybox, but let's use ubuntu for a
 # fair comparison 
-FROM tutum/ubuntu-saucy
+FROM ourtutum
 
-MAINTAINER Ram Rajamony, rajamon@us.ibm.com
+#sudo sed -i s/old-releases.ubuntu.com/ubuntu saucy-security/security.ubuntu.com/ubuntu bionic-security/g /etc/apt/sources.list
 
 RUN apt-get -qq install -y libgomp1 numactl
 ADD bin /
